syntax = "proto3";
package topk.data.v1;

import "topk/data/v1/document.proto";
import "topk/data/v1/expr/logical.proto";

service WriteService {
  // Upsert
  rpc UpsertDocuments(UpsertDocumentsRequest) returns (UpsertDocumentsResponse);

  // Update
  rpc UpdateDocuments(UpdateDocumentsRequest) returns (UpdateDocumentsResponse);

  // Delete
  rpc DeleteDocuments(DeleteDocumentsRequest) returns (DeleteDocumentsResponse);
}

// Upsert

message UpsertDocumentsRequest {
  // Documents to upsert.
  //Existing documents will be replaced, new documents will be created.
  repeated Document docs = 1;
}

message UpsertDocumentsResponse {
  // Log sequence number at which the upsert was applied.
  string lsn = 1;
}

// Update

message UpdateDocumentsRequest {
  // Documents to update.
  // Existing documents will merged with the provided fields.
  // If a document does not exist, it will not be created.
  repeated Document docs = 1;
}

message UpdateDocumentsResponse {
  // Log sequence number at which the update was applied.
  // If no updates were applied, this will be empty.
  string lsn = 1;
}

// Delete

message DeleteDocumentsRequest {
  // Document IDs to delete
  repeated string ids = 1;
  // Filter expression to delete.
  // Documents matching this expression will be deleted.
  LogicalExpr expr = 2;
}

message DeleteDocumentsResponse {
  // Log sequence number at which the delete was applied.
  string lsn = 1;
}
